# airllm

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
benchmark_results/: BENCHMARK_COMPLETO_2026-06-29.md  README.md  benchmark_report.md  benchmark_results.json  java_battery_report.md  java_battery_results.json  run_benchmark.py  run_java_battery.py
config/: permissions.toml  schedule.toml
config/agents/: messaging.toml  research.toml  social-media.toml
crates/airllm-bridge/: Cargo.toml
crates/airllm-bridge/src/: lib.rs  server.rs  types.rs
crates/airllm-cli/: Cargo.toml
crates/airllm-cli/src/: config.rs  dashboard.rs  main.rs
crates/airllm-cli/src/commands/: chat.rs  code.rs  mod.rs  models.rs  refactor.rs  review.rs  routes.rs  test.rs
crates/airllm-cli/src/tui/: app.rs  mod.rs  stream.rs  ui.rs
crates/airllm-daemon/: Cargo.toml
crates/airllm-daemon/src/: lib.rs
crates/airllm-mcp/: Cargo.toml
crates/airllm-mcp/src/: error.rs  lib.rs  main.rs  server.rs  tools.rs
crates/airllm-ollama/: Cargo.toml
crates/airllm-ollama/src/: client.rs  error.rs  lib.rs  router.rs  stream.rs  types.rs
crates/airllm-ollama/tests/: test_client.rs  test_router.rs  test_stream.rs
crates/airllm-orchestrator/: Cargo.toml
crates/airllm-orchestrator/agents/: architect.toml  coder.toml  debugger.toml  documenter.toml  performance.toml  planner.toml  refactorer.toml  reviewer.toml  security.toml  tester.toml
crates/airllm-orchestrator/prompts/: architect.md  coder.md  debugger.md  documenter.md  performance.md  planner.md  refactorer.md  reviewer.md  security.md  tester.md
crates/airllm-orchestrator/src/: agent.rs  consolidate.rs  decompose.rs  error.rs  lib.rs  main.rs  orchestrator.rs  permissions.rs  prompt_parser.rs  registry.rs  system_prompt.rs  tools.rs  types.rs
crates/airllm-orchestrator/tests/: test_agents.rs  test_consolidate.rs  test_decompose.rs  test_orchestrator.rs
crates/airllm-permissions/: Cargo.toml
crates/airllm-permissions/src/: lib.rs
crates/airllm-python/: Cargo.toml
crates/airllm-python/src/: lib.rs
crates/airllm-scheduler/: Cargo.toml
crates/airllm-scheduler/src/: lib.rs
crates/airllm-state/: Cargo.toml
crates/airllm-state/src/: lib.rs
crates/airllm-tools/: Cargo.toml
crates/airllm-tools/src/: email.rs  lib.rs  messaging.rs  social_media.rs  webhook.rs
crates/airllm-training/: Cargo.toml
crates/airllm-training/src/: lib.rs
docs/: BENCHMARK_OLLAMA_LOCAL_MODELS_2026-06-27.md  BENCHMARK_V2_V3_STACK_2026-06-27.md  GUIA_EXECUCAO.md  GUIA_MANUTENCAO.md  MAINTENANCE_GUIDE.md  PLANO_MODERNIZACAO.md  PLANO_PLATAFORMA_AGENTES_AUTONOMOS.md  PLANO_REVISADO_V3.md  README_pt-br.md  ROADMAP_PARALELO_3_FRENTES.md  RUN_GUIDE.md  TEST_REPORT_2026-06-27.md  TEST_REPORT_SCENARIOS_2026-06-28.md  TEST_REPORT_V4_2026-06-28.md
frontend/: .env.example  .openairllm.json  CHANGELOG.md  README.md  package.json
frontend/src/: commands.test.ts  commands.ts  cost-tracker.ts  main.tsx  query.ts
frontend/src/__tests__/: bugfixes.test.ts  process-title.test.ts
frontend/src/bootstrap/: state.ts
frontend/src/bridge/: bridgeEnabled.ts  bridgeMain.ts  envLessBridgeConfig.ts  initReplBridge.ts  sessionRunner.ts  trustedDevice.ts
frontend/src/cli/: bg.test.ts  bg.ts  bgRegistry.test.ts  headlessHeartbeat.test.ts  headlessHeartbeat.ts  print.ts  update.ts
frontend/src/cli/handlers/: auth.ts  autoMode.ts  mcp.tsx  plugins.ts  xaiAuth.test.ts  xaiAuth.ts
frontend/src/commands/: auto-fix.test.ts  createMovedToPluginCommand.ts  init.ts  insights.ts  install.tsx  review.ts  statusline.tsx  ultraplan.tsx
frontend/src/commands/assistant/: assistant.ts
frontend/src/components/: AutoUpdater.tsx  ClaudeInChromeOnboarding.tsx  ConsoleOAuthFlow.tsx  ExportDialog.test.tsx  Feedback.tsx  IdeOnboardingDialog.tsx  ModelPicker.tsx  OutputStylePicker.tsx  ProviderManager.test.tsx  ProviderManager.tsx  ResumeTask.tsx  StartupScreen.palettes.ts  StartupScreen.ts  Stats.tsx  TeleportRepoMismatchDialog.tsx  ThemePicker.tsx
frontend/src/constants/: brand.ts  figures.ts  product.ts  promptIdentity.test.ts  prompts.ts
frontend/src/entrypoints/: cli.test.ts  cli.tsx  mcp.ts  sdk.d.ts
frontend/src/grpc/: server.ts
frontend/src/hooks/: useDiffInIDE.ts  useOfficialMarketplaceNotification.tsx  useVoice.ts
frontend/src/i18n/: commandDescriptions.ts  index.ts
frontend/src/ink/: terminal.ts
frontend/src/integrations/: artifactGenerator.test.ts  discoveryCache.test.ts  discoveryService.test.ts  routeMetadata.test.ts  runtimeMetadata.test.ts  runtimeMetadata.ts
frontend/src/migrations/: resetAutoModeOptInForDefaultOffer.ts
frontend/src/query/: autoCompactCooldown.test.ts
frontend/src/screens/: Doctor.tsx  REPL.tsx  doctorDiagnosticLoad.test.ts
frontend/src/server/: lockfile.ts  server.ts  serverBanner.ts  serverLog.ts  sessionManager.ts
frontend/src/services/: ads.test.ts  ads.ts  notifier.ts  rateLimitMessages.ts  voice.ts
frontend/src/skills/: loadSkillsDir.test.ts
frontend/src/utils/: analyzeContext.messageBreakdown.test.ts  attribution.test.ts  attribution.ts  auth.ts  autoUpdater.ts  caCertsConfig.ts  cleanup.test.ts  config.deferredWrite.test.ts  config.ts  conversationArc.test.ts  conversationRecovery.hooks.test.ts  conversationRecovery.test.ts  copilotOptimization.ts  doctorDiagnostic.settingsPath.test.ts  doctorDiagnostic.ts  env.test.ts  env.ts  envFile.test.ts  envUtils.ts  execFileNoThrow.test.ts  githubModelsCredentials.ts  globalPackageManager.test.ts  globalPackageManager.ts  gracefulShutdown.ts  hookChains.integration.test.ts  hookChains.test.ts  hookChains.ts  http.ts  json.ts  knowledgeGraph.stress.test.ts  knowledgeGraph.test.ts  localInstaller.ts  logoV2Utils.ts  managedEnv.test.ts  managedEnv.ts  markdownConfigLoader.scaling.test.ts  markdownConfigLoader.ts  memoryPressure.ts  messages.toolPairingDiagnostics.test.ts  messages.ts  (+33 more)
prompts/: messaging.md  research.md  social-media.md
python/airllm/: __init__.py  __init__.pyi
scripts/: benchmark_ollama_local_models.py  benchmark_v2_v3_stack.py
(+147 files in other folders)
