[workspace]
resolver = "2"
members = [
    "crates/airllm-ollama",
    "crates/airllm-orchestrator",
    "crates/airllm-bridge",
    "crates/airllm-cli",
    "crates/airllm-mcp",
    "crates/airllm-python",
    "crates/airllm-state",
    "crates/airllm-permissions",
    "crates/airllm-tools",
    "crates/airllm-scheduler",
    "crates/airllm-training",
    "crates/airllm-daemon",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["Erik Tonon <eriktonon@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/lyogavin/airllm"
description = "AirLLM v3.0 — Multi-agent code orchestration in Rust with Ollama"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# MCP
rmcp = "0.1"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
regex = "1"
parking_lot = "0.12"
memmap2 = "0.9"

# Internal crates
airllm-ollama = { path = "crates/airllm-ollama" }
airllm-orchestrator = { path = "crates/airllm-orchestrator" }
airllm-bridge = { path = "crates/airllm-bridge" }
airllm-state = { path = "crates/airllm-state" }
airllm-permissions = { path = "crates/airllm-permissions" }
airllm-tools = { path = "crates/airllm-tools" }
airllm-scheduler = { path = "crates/airllm-scheduler" }
airllm-training = { path = "crates/airllm-training" }
airllm-daemon = { path = "crates/airllm-daemon" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true