[package]
name = "airllm-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
airllm-ollama = { workspace = true }
airllm-orchestrator = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[lib]
name = "airllm_bridge"
path = "src/lib.rs"