[package]
name = "airllm-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
airllm-orchestrator = { workspace = true }
airllm-ollama = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "airllm_mcp"
path = "src/lib.rs"

[dev-dependencies]
airllm-ollama = { workspace = true }
mockito = "1"