[package]
name = "airllm-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Async Ollama HTTP client and model router for AirLLM v3.0"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-stream = "0.3"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["full", "test-util"] }

[lib]
name = "airllm_ollama"
path = "src/lib.rs"