[package]
name = "airllm-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
airllm-ollama = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
mockito = "1"

[lib]
name = "airllm_orchestrator"
path = "src/lib.rs"