[package]
name = "airllm-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
airllm-ollama = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
reqwest = { workspace = true }

[lib]
name = "airllm_tools"
path = "src/lib.rs"